--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
 <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
 </head>
 <body>
+    <!--Header-->
+    <header>Header</header>
+
+    <!--Main Content-->
+    <Main>Main Content</Main>
+
+    <!--Footer-->
+    <footer>Footer</footer>
+    
+
      
 </body>
 </html>
