corrected css error included in previous commit - erroneous ] on line 34 of style.css

--- a/gallery.html
+++ b/gallery.html
@@ -58,7 +58,16 @@
     </header>
 
     <!--Main Content-->
-    <main>Main Content</main>
+    <main>
+      <section id="g">
+        <div id="photos">
+          <img
+            src="assets/images/athletes.webp"
+            alt="Two athletes running together"
+          />
+        </div>
+      </section>
+    </main>
 
     <!--Footer-->
     <footer>
