--- a/signup.html
+++ b/signup.html
@@ -58,7 +58,73 @@
     </header>
 
     <!--Main Content-->
-    <main>Main Content</main>
+    <main>
+      <section id="signup">
+        <form
+          action="https://formdump.codeinstitute.net"
+          method="POST"
+          id="signup-form"
+        >
+          <h2>
+            <i class="fa-solid fa-heart-pulse"></i> LET'S GET YOU SIGNED UP!
+          </h2>
+
+          <label for="first_name">First Name</label>
+          <input
+            id="first_name"
+            name="first_name"
+            class="text-input"
+            type="text"
+          />
+          <br />
+          <label for="last_name">Last Name</label>
+          <input id="last_name" name="last_name" class="text-input" type="text/>
+          <br />
+          <label for="email_address">Email Address</label>
+          <input
+            id="email_address"
+            name="email_address"
+            class="text-input required"
+            type="email"
+          />
+
+          <div class="radio-buttons">
+            <div>
+              <label for="road">Road</label>
+              <input
+                type="radio"
+                name="running_preference"
+                id="road"
+                value="road"
+                required
+                checked
+              />
+            </div>
+            <div>
+              <label-for ="Trail">Trail</label-for>
+              <input
+                type="radio"
+                name="running_preference"
+                id="trail"
+                value="trail"
+                required
+              />
+            </div>
+            <div>
+              <label for="Both">Both</label>
+              <input
+                type="radio"
+                name="running_preference"
+                id="both"
+                value="both"
+                required
+              />
+            </div>
+          </div>
+          <button type="submit" class="join-button">Let's Run!</button>
+        </form>
+      </section>
+    </main>
 
     <!--Footer-->
     <footer>
