--- a/signup.html
+++ b/signup.html
@@ -74,18 +74,28 @@
             id="first_name"
             name="first_name"
             class="text-input"
-            type="text"
+            type="text-input"
+            required
           />
           <br />
+
           <label for="last_name">Last Name</label>
-          <input id="last_name" name="last_name" class="text-input" type="text/>
+          <input
+            id="last_name"
+            name="last_name"
+            class="text-input"
+            type="text-input"
+            required
+          />
           <br />
+
           <label for="email_address">Email Address</label>
           <input
+            type="email"
             id="email_address"
             name="email_address"
-            class="text-input required"
-            type="email"
+            class="text-input"
+            required
           />
 
           <div class="radio-buttons">
