began to add styling for signup form

--- a/gallery.html
+++ b/gallery.html
@@ -59,7 +59,7 @@
 
     <!--Main Content-->
     <main>
-      <section id="g">
+      <section id="gallery">
         <div id="photos">
           <img
             src="assets/images/athletes.webp"
