removed odd closing tag from index.html and added hidden h2 on gallery.html

--- a/gallery.html
+++ b/gallery.html
@@ -59,6 +59,7 @@
 
     <!--Main Content-->
     <main>
+      <h2 class="hidden-Gallery">Gallery</h2>
       <section id="gallery">
         <div id="photos">
           <img
