made changes to form.html code following using HTML validator to correct errors

--- a/signup.html
+++ b/signup.html
@@ -74,7 +74,7 @@
             id="first_name"
             name="first_name"
             class="text-input"
-            type="text-input"
+            type="text"
             required
           />
           <br />
@@ -84,7 +84,7 @@
             id="last_name"
             name="last_name"
             class="text-input"
-            type="text-input"
+            type="text"
             required
           />
           <br />
@@ -111,7 +111,7 @@
               />
             </div>
             <div>
-              <label-for ="Trail">Trail</label-for>
+              <label for="trail">Trail</label-for>
               <input
                 type="radio"
                 name="running_preference"
@@ -121,7 +121,7 @@
               />
             </div>
             <div>
-              <label for="Both">Both</label>
+              <label for="both">Both</label>
               <input
                 type="radio"
                 name="running_preference"
